# PieBedrock

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
bedrockproto/: buffer.py  server.py
bedrockproto/packets/: disconnect.py  login.py  packet.py  play_status.py
piebedrock/: __main__.py  buffer.py  const.py  interface.py  jwt.py  server.py  utils.py
piebedrock/packets/: disconnect.py  login.py  network_settings.py  packet.py  play_status.py  resource_packs_info.py  server_client_handshake.py
